# Atividades-C

./: .gitignore  Area.c  CMakeLists.txt  README.md  index.md
ED SALA/: Lista 1 Exercicio 1.c  Menu.c  isso ai.c  listaseq.c  listaseq.h  menu.c  pilhaseq.c  pilhaseq.h  pilhaseqmain.c  saida
Estrutura de Dados/Array e Strings/: Acima da diagonal principal.c  Botas Perdidas .c  Estagio.c  Exercicio 3.c  Exercicio 4.c  Exercicio 5.c  Frase completa.c  Frequecia de numeros.c  Loop musical.c  Mensagem oculta.c  Ponteiros e arrays.c  Selecao em Vetor.c  Soma da propina.c  obi uri.c  substituicao em vetor 1.c  teste.c
Estrutura de Dados/Fila/: fila.c  fila.h  fila_preferencial.c  fila_preferencial.h  filadinamica.c  filadinamica.h  filaestatica.c  filaestatica.h  main_preferrencial.c  testafiladinamica.c  testafilaestatica.c
Estrutura de Dados/Listas/: listaencadeada.c  listaencadeada.h  listalinear.c  listalinear.h  testarlistaencadeada.c  testelistalinear.c
Estrutura de Dados/Pilhas/: Trilhos novamente.c  Trilhos.c  balanço de parenteses 1.c  mainPilhadinamica.c  mainPilhaestatica.c  pilhadinamica.c  pilhadinamica.h  pilhaestatica.c  pilhaestatica.h
Estrutura de Dados/Revisao Algoritmos/: Animal.c  Cedulas.c  Consecutivos.c  Conversao de tempo.c  Coordenadas de um Pontos.c  Crescimento populacional.c  Detector de falhas.c  Distancia entre dois pontos.c  Divisores 1.c  Gasto de Combustivel.c  Salario com Bonus1.c  Soma de imapares consecutivos.c  Sort Simples.c  Tempo de Jogo em Minutos.c  Teste de Selecao 1.c  jogo do limite.c  numero primo.c  sequencia s2.c
(+10 files in other folders)
