cmake_minimum_required(VERSION 3.13)
project(Atividades_C C)

set(CMAKE_C_STANDARD 99)

add_executable(Atividades_C "Estrutura de Dados/Fila/fila.c" "Estrutura de Dados/Fila/fila.h" "Estrutura de Dados/Fila/main_preferrencial.c" "Estrutura de Dados/Fila/fila_preferencial.c" "Estrutura de Dados/Fila/fila_preferencial.h")